--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
 <p style="font-weight:bold;">留言区:  (现共有<span id="impression_num"></span>条用户留言)</p></B>
 <!--------------- 留言区开始 新的留言请放在最上面--------------------->
  
+ <p class ="impression"style ="color: yellow;font-weight:bold;font-size:30px;background-color:green;">勤奋不一定有钱，但秦奋一定有钱
+----20190422 嘤嘤嘤
+</p>
+ 
  <p class ="impression"style ="color: yellow;font-weight:bold;font-size:30px;background-color:green;">愿我们出走半生，归来仍是少年
 ----20190311 atgghhl
 </p> 
